tests/src/frontend/syntax/invalid/missing_catch.sk

fun test(): void {
  try { 1 }
}
